--- a/todo.txt
+++ b/todo.txt
@@ -46,6 +46,9 @@ IMPORT
 
 
 
+
+
+
 FARE DOWNLOAD CON LOIC quando importiamo immagini, poi io lavoro a queste altre cose ...
 CHIEDERE A LOIC di cancellare l'immagine "test_image"
 
@@ -53,11 +56,12 @@ CHIEDERE A LOIC di cancellare l'immagine "test_image"
 In ONTOLOGY
 
 	- Order of properties for WebPage (EstablishedText): prima tutte quelle per documenti, poi tutte quelle per pubblicazioni!
-	
+	- Add Europeana, DPpedia per trovare immagini!!
 
 
 In MODEEMPLOI
     - Add how to create places
+    - move it to gustaveroudproject organization in Github and delete varia-roud (cuso and genetics already moved)
 
 
 In DATA
@@ -217,8 +221,46 @@ If needed to change something in data, be careful !
 
 Permissions changed, only project members can see our data
 
+Quando non si capisce cos'è l'errore (object or subject Class contraint), guarda i namespace
 
 
+
+####################
+##
+## SPARQL QUERIES
+##
+####################
+
+	Cominciare a scrivere query, la dichiarazione del prefisso (se lo conosce) lo aggiunge automaticamente, es.
+select ?p where { 
+	?p rdf:type roud-oeuvres:EstablishedText
+} limit 10 
+	Aggiunge automaticamente in alto gli URI per i due prefissi: rdf e roud-oeuvres
+
+
+	Give me all EstablishedText in un Dossier
+PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
+PREFIX roud-oeuvres: <http://www.knora.org/ontology/0112/roud-oeuvres#>
+PREFIX knora-base: <http://www.knora.org/ontology/knora-base#>
+PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
+select ?EstablishedText ?Title ?label where { 
+	?EstablishedText a roud-oeuvres:EstablishedText .
+    ?EstablishedText roud-oeuvres:establishedTextHasTitle ?TitleObject .
+    ?TitleObject knora-base:valueHasString ?Title .
+    ?EstablishedText rdfs:label ?label
+} limit 10 
+
+
+
+
+
+####################
+##
+## POSTMAN
+##
+####################
+
+Usare Basic Auth
 
 
 
