--- a/todo.txt
+++ b/todo.txt
@@ -1,51 +1,5 @@
 
 
-========= PRIORITY 1
-	guiOrder di subclass publication, à faire aprés le passage à V2
-
-
-========= PRIORITY 2 - import images
-- TEST IMAGES (avec script Gilles)
-	ls -1 -d $(pwd)/* > xx.txt
-	run scriptGilles sur xx.txt (qui contiennent une dizaine de dossiers chaque fois)
-
-- RE-CRÉER XML (import.py)
-	attention à changement rdf, già cambiato in cote-iri-mss
-
-- IMPORT IMAGES (BULK IMPORT)
-
-
-
-
-
-========= Notes 2019-03-19
-
-When starting a new terminal, start with setting the environment variables:
-
-cd DaSCH-CI-CD/lausanne-v5+/
-source platform_local.env
-source release_v6.0.0.env
-
-docker compose survival guides:
-
-# check what's running
-docker-compose ps
-# check see logs
-docker-compose logs -tf
-# or for one container
-docker-compose logs -tf api
-# start the knora ecosystem
-docker-compose up -d
-# stop it
-docker-compose down
-# restart knora only (after changing the ontology or to test after an import)
-docker-compose restart api
-
-import roud-oeuvres project: upload the ttl files from github (onto, admin, permission) and data-list (list only) and the data that have been ported to v6 (this file)
-
-
-
-
 
 ###################
 ##
@@ -59,22 +13,6 @@ OPEN ISSUES
 
 
 
-IMPORT
-	ONTO AND DATA
-		- admin.ttl
-		- permissions.ttl
-		- onto.ttl
-		- data.ttl (last version sent with Switch, important because the URI of the manuscripts will be reused for importing images, attention, permissions changed from 
-			CR knora-base:ProjectAdmin|M knora-base:ProjectMember|V knora-base:KnownUser,knora-base:UnknownUser
-			to
-			CR knora-base:ProjectAdmin|D knora-base:ProjectMember
-			find and replace in the ttl)
-	IMAGES
-		- access to scanlett
-		- bulk import (multiple xml files)
-			
-
-
 
 
 
@@ -84,34 +22,28 @@ IMPORT
 ##
 ###################
 
+IMPORT IMAGES
+	TEST IMAGES (avec script Gilles)
+		ls -1 -d $(pwd)/* > xx.txt
+		run scriptGilles sur xx.txt (qui contiennent une dizaine de dossiers chaque fois)
 
+	RE-CRÉER XML (import.py)
+		attention à changement rdf, già cambiato in cote-iri-mss
 
-
-
-
-
-FARE DOWNLOAD CON LOIC quando importiamo immagini, poi io lavoro a queste altre cose ...
-CHIEDERE A LOIC di cancellare l'immagine "test_image"
+	IMPORT IMAGES (BULK IMPORT)
 
 
 In ONTOLOGY
-
-	- Order of properties for WebPage (EstablishedText): prima tutte quelle per documenti, poi tutte quelle per pubblicazioni!
 	- Add Europeana, DPpedia per trovare immagini!!
 
 
 In MODEEMPLOI
     - Add how to create places
-    - move it to gustaveroudproject organization in Github and delete varia-roud (cuso and genetics already moved)
-
+    
 
 In DATA
     - aggiungere manualmente immagine: page_CRLR GR MS 2 C/14a___f. 1r___1
     - possible Places to be added : Galerie Paul Vallotton; Marsauche, rue de Bourg; Vevey (collège de); Université de Lausanne; Gymnase classique cantonale de Lausanne; Bois de lare, da file (ultimo che resta nel file da scanlett, con cose in rosa)
-
-
-OTHERS
-    - Check visual graph
 
 
 
@@ -229,8 +161,8 @@ Esempio: http://rdfh.ch/0112/roud-oeuvres/YSmHh1XJTvKfsbkKPhpy_w
 
 Per cercare una classe o proprietà in GraphDB, nella HomePage di GraphDB vai a View resource e metti label (con prefix, che sarà risolto automaticamente)
 
-SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esempio, per cambiare editore HTML ... Poi far partire webserver (bisogna cambiare qualcosa in public/js = https://github.com/dhlab-basel/Knora/blob/develop/salsah1/src/public/js/00_init_javascript.js)
-		docker exec -it salsah bash
+SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esempio, per cambiare editore HTML ... Poi far partire webserver (bisogna cambiare qualcosa in public/js = https://github.com/dhlab-basel/Knora/blob/develop/salsah1/src/public/js/00_init_javascript.js)  poi exit
+		docker exec -it salsah bash (oppure: docker exec -it app1 bash)
 		bash-4.4# pwd
 		/salsah/public
 		bash-4.4# ls
@@ -244,7 +176,7 @@ SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esem
 		arbor                  ckeditor               ckeditor_4.7.0
 		bootstrap              ckeditor-4.7.2-Editor  jQuery
 Oppure
-	docker exec -it knora bash
+	docker exec -it api bash
 
 Multiple pages of the same resources should be created together in the same xml file, otherwise, it would create multiple times also the targeted resources (of course!)
 
@@ -262,6 +194,8 @@ If needed to change something in data, be careful !
 Permissions changed, only project members can see our data
 
 Quando non si capisce cos'è l'errore (object or subject Class contraint), guarda i namespace
+
+Usare framateam platec per domande
 
 
 
@@ -316,6 +250,9 @@ Usare Basic Auth
 
 
 ----------------------> DONE - IN ONTOLOGY  <--------------------
+Changed 20.03.2019
+	guiOrder di subclass publication, à faire aprés le passage à V2
+	Order of properties for WebPage (EstablishedText): prima tutte quelle per documenti, poi tutte quelle per pubblicazioni!
 Changed 21.01.2019
 	- OK add hasPositionInDirectSource to webpage, both when DirectSource is Document or Publication. It will help automatically create the TOC. The value of this property can be added later, when all notes or parts of collections are inserted.
 	- OK same thing for part of collection: delete prop "bookSectionIsPartOfRoudCollection". Treat it as Note in Document, that is as EstablishedText having properties: directSource, directSourceStartPage, directSourceEndPage, directSourcePosition
@@ -400,114 +337,6 @@ EMPLOI : les données maintenant sont protegés
 
 
 ------------------------->  LISTES. DONE <---------------------------------------------------------
-In LISTES
-- isInArchiveList : Correggere nomi archives in francese 
-	--- changed line 94738 from "CRLR Colomb" to "Collection privée" (this is the @fr, at line 94744 is @en; don't know why sometime the two languages are on the same line and sometimes no)
-	--- changed line 94742 from "CRLR Colomb" to "CRLR Steven-Paul Robert" (this is the @fr, at line 94748 is @en; don't know why sometime the two languages are on the same line and sometimes no)
-
-e ajouter à la liste
-- CRLR Gilbert Vincent :a :label :hasSublistNode :hasRootNode :listNodePosition :listNodeName
-- ALS Mauriche Chappaz :a :label :hasSublistNode :hasRootNode :listNodePosition :listNodeName
-- ALS Chessex :a :label :hasSublistNode :hasRootNode :listNodePosition :listNodeName
-- ALS SES (Societé des écrivains suisse) :a :label :hasSublistNode :hasRootNode :listNodePosition :listNodeName
-
-(au cas où ajouter "autre" ..)
-	--- [SUB] :a :ListNode
-	--- [SUB] :label
-	--- :hasSublistNode [OBJ] 
-	--- [SUB] :hasRootNode
-	--- [SUB] :listNodePosition
-	--- [SUB] :listNodeName
-
-<http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-isInArchive-CRLRGilbertVincent> a :ListNode .
-<http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-isInArchive-ALSChappaz> a :ListNode .
-<http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-isInArchive-ALSChessex> a :ListNode .
-<http://rdfh.ch/lists/0112/roud-oeuvres-flatlist-isInArchive-ALSSES> a :ListNode .
----------------------------------------------------------------------------------------------------
-
-
-
-
-
-
-####################
-##
-## DONE
-##
-####################
-
-
-
-----------------------> DONE- CHANGED IN VISUAL GRAPH (changes after test - 20-24 august 2018)
-DONE. aggiungere abstract property al LABEL e non COMMENT delle proprietà astratte
-DONE. aggiungere datecomputable come properietà astratta ???
-DONE. témoin de base pour la page du site
-DONE. texte > page du site
-DONE. ajouter notice à périodique et éditeur
-DONE. specifier pages du fac-similés si le texte ne correspond pas à la totalité du témoin de base (par exemple, section d'un cahier, ou d'une liasse d'un recueil). Better like this, even if it adds another info, because we need to retrieve also the "fiche" for the description of the document; if we link directly to the pages, it would need anyway another step to go back to the document containing those pages. In this way, request can be made to look at the specific pages only if the field for specific pages is not empty.
-DONE. title of publication. richtext, not simple !! Oppure decidere come citare cose in titolo
-DONE. original dans le fonds roud in publications --> 'oui ou non ou indiquer le fonds' to be added to the label. Simpletext, not rich
-DONE. retranscrit (ocr) in publications --> 'fait ou pas fait' to be added to the label. Simpletext, not rich 
-DONE. titre du livre in BookSection
-DONE. properties of EstablishedText
-DONE. delete publicationHasTranslator
-DONE. Cambiato da SimpleText a Richtext per hasSupportInfo)
-DONE. Create new property and distinguish datereadable and datecomputable, the same distinction of dateestablishedreadable and dateestablishedcomputable
-DONE. books add possibility to specify pages
-DONE. bookSectionIsPartOf textValue instead of link
-DONE. property hasPublisher added to BookSection
-DONE. added personInfoHasSource to Person
-	In ONTOLOGY
-DONE - change cardinality lat and long for places to optional
-DONE - correggere label delle proprietà che comprendono fait > Fait e oui > Oui (e contrari)
-DONE - change Auteur, traducteur --> anche Artiste
-DONE - Volume de la section d'un livre (si plusieurs volumes). ---> senza punto finale
-DONE - add link instead of image for work of arts
-DONE - create link 'sameAs' between Author and Person (Person --> is same as --> Author)
-DONE - change réédition to TEXT "Si réédition (même maison d'édition), spécifier le numéro et l'année, ex. 'rééd. 2011'"
-
-
-
-
-
---------------------> DO MANUALLY AFTER IMPORT <-----------------------
-2400 items imported, 60 da ricontrollare manualmente (2,5%)
-
-- DONE. correct biblio_321 DONE, biblio_309 DONE, biblio_671 DONE, biblio_672 DONE, biblio_663 DONE, biblio_634 DONE ("FAKE" in label), do not delete because there are links. Check also in commentaries
-- DONE. rome, peintre et ecrivains, mi sa che l'autore non è goethe ... aa.vv. CHECK FICHE E RELATED
-- DONE. check, se non sono già tra gli articoli inserirli a mano (per vedere meglio guarda backup):
-	- 634	Traduction	Holderlin Friedrich, Brentano Clemens	Le Romantisme allemand			Dirigé par Béguin Albert		Marseille	Les Cahiers du Sud	1949	p. 393-405	Hölderlin: "Souvenir", "Temps de la moisson", "Âges de la vie", "Moitié de la vie", "Diotima de l'au-delà (fragment)", "L'Hivers", "Le Printemps", "Quatrain". Brentano: "Je suis une maison...", "Au coeur d'une douleur profonde...", "Échos d'une musique de Beethoven", "Myrte, bien aimé, murmure...", "Chant du cygne". Les versions des poèmes de Hölderlin diffèrent de celles de 1937.	Fait + photocopié			Non
-	- 663	Traduction	Hölderlin Friedrich, Brentano Clemens	Le Romantisme allemand			Dirigé par Béguin Albert	194, no. spécial	Marseille	Les Cahiers du Sud	1937-05(-06)	p. 361-371	Hölderlin: "Souvenir", "Temps de la moisson", "Âges de la vie", "Moitié de la vie", Diotima de l'au-delà (fragment)", "L'Hiver", "Le Printemps", "Quatrain") Poèmes de Clémens Brentano ("Je sais une maison", Au coeur d'une douleur profonde…", "Echos d'une musique de Beethoven", "Myrte bien-aimé murmure…", "Chant du cygne")	Fait + photocopié			Non
-	- Traduction	Leisinger Hermann	Les peintures étrusques de Tarquinia				10		La Guilde du Livre	1953			Fait		Oui	Non (mais dans boîte La Guilde du Livre)
-	- articolo di traduzione con 10 autori ...
-- DONE. Check all books --books (copy).ods-- (inclusi label e related !!!)
-- DONE. luoghi
-- DONE. persons added after (in yellow) and check if there is any source that was not there before
-- DONE. vérifier qu'il n'y a rien avec "test" ou "dsa"
-- DONE. correggi tutti '&amp;rsquo;'
-- DONE. molteplici autori
-- DONE. check.csv
-- DONE. A Propos de Roud: Titre: « Gustave Roud », Auteur: SIMOND Daniel, Le Radio, Journal de la T.S.F., Lausanne, 16 mars 1934, XIIème année, N°571, pages 396-397. Avec des photographies de Gustave Roud. 
-- DONE. MS 2 B/1a  check commentaire (public) à > a
-
-- DONE. NONE FOUND .... plusieurs reference bibliographiques dans commentaire public et commentaire interne ... à créer à la main, chercher "Biblio" dans commentaire ...
-- DONE. fiches 224, 247, 252, 253, 260, 262, 263, 264, 308, 318, 388, 679, 1242, 1367, 1368, 1369, 1371, 1423 (in OUTPUT/fiches_problematiques.xml)
-- DONE. notes allant, check backup (ho erroneamente spostato quello che c'era in datation_comment in datation trasformandolo in data ... da ripristinare, dovrebbero essere pochi casi)
-- DONE. check in backup fiche 103
-- DONE. add links when in the text occurs 'fiche' (dato che non ci sono più i numeri) 
-- biographie to be added manually !!!
-
-
-DONE. MODE EMPLOI, add inidicazioni per link a biblio e a fiche (fonds + cote)
-DONE. EMPLOI: web_  à la pace de texte_ comme label
-EMPLOI : les données maintenant sont protegés
-
-
-
-
-
-
--------------------------  LISTES. DONE ---------------------------------------------------------
 In LISTES
 - isInArchiveList : Correggere nomi archives in francese 
 	--- changed line 94738 from "CRLR Colomb" to "Collection privée" (this is the @fr, at line 94744 is @en; don't know why sometime the two languages are on the same line and sometimes no)
